--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- local stylesheet -->
     <link href="style.css" rel="stylesheet">
+   
   </head>
 
   <body class="bg-light">
@@ -127,16 +128,16 @@
             <div class="card">
               <!-- title-card image -->
               <img
-                src="https://zaiocontent.s3.eu-west-2.amazonaws.com/images+of+courses/css_netflix.png"
+                src="https://zaiocontent.s3.eu-west-2.amazonaws.com/images+of+courses/html_youtube.png"
                 class="card-img-top"
                 alt="..."
               />
               <!-- title card body -->
               <div class="card-body">
-                <h5 class="card-title">Netflix Landing Page</h5>
+                <h5 class="card-title">Youtube Landing Page</h5>
                 <p class="card-text">Built this with HTML & CSS</p>
-                <a href="https://netflix-login-page-cwclone.netlify.app" target="_blank" class="btn btn-primary">View Website</a>
-                <a href="https://github.com/CwengaGosa/Cwenga-git-netflix" target="_blank" class="btn btn-outline-success"><i class="bi bi-code-slash"></i></a>
+                <a href="https://cwenga-youtube-clone.netlify.app/" target="_blank" class="btn btn-primary">View Website</a>
+                <a href="https://github.com/CwengaGosa/cwenga-youtube-clone" target="_blank" class="btn btn-outline-success"><i class="bi bi-code-slash"></i></a>
               </div>
             </div>
           </div>
