fixed about me paragraph>

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <!-- paragraph about me -->
               <div class="col-md-6 mt-3">
                 <h1 class="text-center text-md-start"><mark>About me</mark></h1>
-                <p class="lead">I have been a Debate Adjudicator since exiting high school. I adjudicate World Schools' style and British Parlimentary style debates. In 2023 I began my journey to becoming a Traditional Healer, which is something I still practice daily. I am currently studing under Zaio on my journey to becoming a Fullstack Developer. I believe people are multi-faceted and should be allowed to explore all sides of themselves in order to live a fufilled life. I ensurre to express all sides of myself in everything I do. I makE sure my projects have my heart in them as well.</p>
+                <p class="lead">I have been a Debate Adjudicator since exiting high school. I adjudicate World Schools' style and British Parliamentary style debates. In 2023 I began my journey to becoming a Traditional Healer, which is something I still practice daily. I am currently studying under Zaio on my journey to becoming a Fullstack Developer. I believe people are multi-faceted and should be allowed to explore all sides of themselves in order to live a fulfilled life. I ensure to express all sides of myself in everything I do. I make sure my projects have my heart in them as well.</p>
               </div>
             </div>
           </div>
